[package]
name = "portwave"
version = "0.5.0"
edition = "2021"
description = "Ultra-fast hybrid IPv4/IPv6 port scanner with adaptive concurrency, banner grab, TLS sniff, and httpx/nuclei pipeline."
license = "MIT"
repository = "https://github.com/assassin-marcos/portwave"
homepage = "https://github.com/assassin-marcos/portwave"
readme = "README.md"
keywords = ["port-scanner", "network", "security", "recon", "ipv6"]
categories = ["command-line-utilities", "network-programming"]
authors = ["assassin-marcos"]

[[bin]]
name = "portwave"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
ipnetwork = "0.20"
anyhow = "1.0"
libc = "0.2"
indicatif = "0.17"
flume = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
