[package]
name = "portwave"
version = "0.9.0"
edition = "2021"
description = "Ultra-fast, IP-focused IPv4/IPv6 port scanner with adaptive concurrency, banner grab, TLS sniff, CDN tagging, scan-diff, webhook, self-update, and a built-in httpx + nuclei recon pipeline."
license = "MIT"
repository = "https://github.com/assassin-marcos/portwave"
homepage = "https://github.com/assassin-marcos/portwave"
documentation = "https://github.com/assassin-marcos/portwave#readme"
readme = "README.md"
keywords = ["port-scanner", "network-scanner", "security", "recon", "bugbounty"]
categories = ["command-line-utilities", "network-programming"]
authors = ["assassin-marcos"]
rust-version = "1.75"
# Ship all artefacts crates.io needs, exclude build outputs + temp dirs
# that would bloat the uploaded .crate file.
include = [
    "src/**/*",
    "ports/*.txt",
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
]

[[bin]]
name = "portwave"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
ipnetwork = "0.20"
anyhow = "1.0"
indicatif = "0.17"
flume = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Self-update: downloads prebuilt binaries from GitHub Releases for the host
# platform (Linux x86_64, macOS x86_64/aarch64, Windows x86_64).
self_update = { version = "0.41", default-features = false, features = ["rustls", "archive-tar", "archive-zip", "compression-flate2", "compression-zip-deflate"] }
# Tiny blocking HTTP client for the GitHub tags API peek — catches the
# "tag pushed, release not yet built" race in `--check-update`.
ureq = { version = "2", default-features = false, features = ["json", "tls"] }
# Fast non-DoS-resistant hasher for scan-state HashSets (skip / prior
# sets). ~4× faster than the std SipHash on small keys like SocketAddr.
rustc-hash = "1.1"

# Unix-only: setrlimit(RLIMIT_NOFILE) to raise the FD soft limit for large scans.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
